# rusty-tetris

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
pkg/: package.json  rusty_tetris.d.ts  rusty_tetris.js  rusty_tetris_bg.wasm  rusty_tetris_bg.wasm.d.ts
src/: lib.rs  shape.rs  tetris.rs
